# pytorch-tools

./: README.md  pyproject.toml
scripts/quickstart/: get_shape.py
src/pytorch_tools/: __init__.py  dltools.py  dstools.py
tests/: test_dataset_info.py  test_imports.py
