[project]
name = "pytorch-tools"
version = "0.1.0"
description = "Tooling for expressive PyTorch code in fewer lines"
readme = "README.md"
authors = [
    { email = "tmp@tmp.xio" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.2.3",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "torch>=2.6.0",
]

[project.scripts]
pytorch-tools = "pytorch_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
